--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							</section>
 
 						<!-- Second Section -->
-							<section id="cfp" class="main special">
+							<section id="cfp" class="main">
 								<header class="major">
 									<h2>Call for Papers</h2>
 									<p>The IEEE International Conference on Embedded Software and Systems brings together researchers and developers from academia, industry, and government to advance the science, engineering, and technology of embedded software development. ICESS is becoming an important venue for research in the design and analysis of software that interacts with physical processes, with a long-standing tradition for results on cyber-physical systems, which compose computation, networking, and physical dynamics.</p>
